# side

./: Cargo.toml  LICENSE.txt  README.md  build.rs  installer.iss
documentation/: side-lang.html
embedded_modules/: important!.txt
embedded_modules/egui0.27/Rust src/: Cargo.toml
embedded_modules/egui0.27/docs/: brief documentation.txt
examples/: hello.sd  hello.spack
examples/01_basics/: functions.sd  hello.sd  loops.sd  variables.sd
examples/02_advanced/: form.sd  list.sd
examples/03_file_operations/: folder_ops.sd  read_file.sd  write_file.sd
examples/04_utilities/: calculator.sd  todo.sd
examples/05_games/: guess_number.sd
side_egui/src/: lib.rs
src/: ast.rs  error.rs  interpreter.rs  lexer.rs  logger.rs  main.rs  packer.rs  parser.rs  project.rs  value.rs
tests/: test_gui.sd  test_gui.spack
tests/testbase/: test1.sd  test2.sd  test3.sd  test4.sd  test5.sd  test6.sd  test7.sd  test8.sd
tests/testfile/: create_folder.sd  create_folder_input.sd  file_test.sd  new-filetest.sd  test-file.sd
tests/testlink/: main.sd  math.sd
tests/testlogs/: test_log.sd
tests/testnative/: test_native.sd  test_native2.sd  test_native3.sd
