[package]
name = "side-interpreter"
version = "1.3.0"
edition = "2021"

[dependencies]
logos = "0.13"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
libloading = "0.8"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"        # оптимизация под размер (z — smallest, s — тоже размер)
lto = true             # оптимизация на всём крейте
codegen-units = 1      # меньше юнитов = больше оптимизаций
strip = true           # вырезать debug-символы (с 1.59)
panic = "abort"        # убрать раскрутку стека (экономит место)