[package]
name = "side-interpreter"
version = "1.4.0"
edition = "2021"

[dependencies]
logos = "0.13"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
libloading = "0.8"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"        
lto = true             
codegen-units = 1      
strip = true          
panic = "abort"       
